[gd_scene load_steps=5 format=2]

[ext_resource path="res://Row.gd" type="Script" id=1]
[ext_resource path="res://Seat.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/sounds/placing.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/clearing.wav" type="AudioStream" id=4]

[node name="Row" type="HBoxContainer" groups=["stadium_row"]]
margin_right = 1200.0
margin_bottom = 128.0
custom_constants/separation = 4
script = ExtResource( 1 )
Seat = ExtResource( 2 )

[node name="ClearedTimer" type="Timer" parent="."]
one_shot = true

[node name="PlacingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="ClearingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="timeout" from="ClearedTimer" to="." method="_on_ClearedTimer_timeout"]
